# poc-bazel-ios

./: .bazelrc  .gitignore  WORKSPACE
Application/: AppDelegate.swift  BUILD.bazel  Main.swift  MainObjc.h  MainObjc.m  NotificationObjc.h  NotificationObjc.m  NotificationObjcExtension.swift  NotificationSwift.swift  UrlGet-Info.plist  poc-bazel-ios-bridging-header.h
ModuleObjc/: BUILD.bazel  FirstViewController.h  FirstViewController.m
ModuleSwift/: BUILD.bazel  SecondViewController.swift
