load("@build_bazel_rules_ios//rules:app.bzl", "ios_application")
load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework", "apple_framework_packaging")

ios_application(
    name = "Application",
    bundle_id = "poc.intepolation",
    srcs = glob([
        "*.swift",
        "*.m",
        "*.h"
    ]),
    minimum_os_version = "12.1",
    families = [
        "iphone"
    ],
    infoplists = ["//Application:UrlGet-Info.plist"],
    visibility = ["//visibility:public"],
    swift_objc_bridging_header = "poc-bazel-ios-bridging-header.h",
    deps = [
        "@//ModuleObjc",
        "@//ModuleSwift"
    ]
)

apple_framework(
    name = "Main",
    platforms = {"ios": "12.1"},
    srcs = glob([
        "*.swift"
    ]),   
    deps = [
        "@//ModuleObjc",
    ],
    visibility = [
        "//visibility:public"
    ],
)